tests/compile-fail/invalid_serializer.stderr
error: unexpected end of input
 --> ../tests/compile-fail/invalid_serializer.rs:3:1
  |
3 | serde::format_description!(); // unexpected end of input
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `serde::format_description` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected token: "bad string"
 --> ../tests/compile-fail/invalid_serializer.rs:4:28
  |
4 | serde::format_description!("bad string", OffsetDateTime, "[year] [month]"); // module name is not ident
  |                            ^^^^^^^^^^^^

error: unexpected token: :
 --> ../tests/compile-fail/invalid_serializer.rs:5:37
  |
5 | serde::format_description!(my_format: OffsetDateTime, "[year] [month]"); // not a comma
  |                                     ^

error: unexpected end of input
 --> ../tests/compile-fail/invalid_serializer.rs:6:1
  |
6 | serde::format_description!(my_format,); // missing formattable and string
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `serde::format_description` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected token: "[year] [month]"
 --> ../tests/compile-fail/invalid_serializer.rs:7:39
  |
7 | serde::format_description!(my_format, "[year] [month]"); // missing formattable
  |                                       ^^^^^^^^^^^^^^^^

error: unexpected token: "[year] [month]"
 --> ../tests/compile-fail/invalid_serializer.rs:8:44
  |
8 | serde::format_description!(OffsetDateTime, "[year] [month]"); // missing ident
  |                                            ^^^^^^^^^^^^^^^^

error: unexpected end of input
 --> ../tests/compile-fail/invalid_serializer.rs:9:1
  |
9 | serde::format_description!(my_format, OffsetDateTime); // missing string format
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `serde::format_description` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input
  --> ../tests/compile-fail/invalid_serializer.rs:10:1
   |
10 | serde::format_description!(my_format, OffsetDateTime,); // missing string format
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `serde::format_description` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected token: "[year] [month]"
  --> ../tests/compile-fail/invalid_serializer.rs:11:54
   |
11 | serde::format_description!(my_format, OffsetDateTime "[year] [month]"); // missing comma
   |                                                      ^^^^^^^^^^^^^^^^

error: unexpected token: :
  --> ../tests/compile-fail/invalid_serializer.rs:12:54
   |
12 | serde::format_description!(my_format, OffsetDateTime : "[year] [month]"); // not a comma
   |                                                      ^

error: invalid component
  --> ../tests/compile-fail/invalid_serializer.rs:13:55
   |
13 | serde::format_description!(my_format, OffsetDateTime, "[bad]"); // bad component name
   |                                                       ^^^^^^^

error[E0432]: unresolved import `not_string`
  --> ../tests/compile-fail/invalid_serializer.rs:14:1
   |
14 | serde::format_description!(my_format, OffsetDateTime, not_string); // string format wrong type
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no external crate `not_string`
   |
   = note: this error originates in the macro `serde::format_description` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0391]: cycle detected when computing type of opaque `my_format::description::{opaque#0}`
  --> ../tests/compile-fail/invalid_serializer.rs:14:1
   |
14 | serde::format_description!(my_format, OffsetDateTime, not_string); // string format wrong type
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires borrow-checking `my_format::description`...
  --> ../tests/compile-fail/invalid_serializer.rs:14:1
   |
14 | serde::format_description!(my_format, OffsetDateTime, not_string); // string format wrong type
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires promoting constants in MIR for `my_format::description`...
  --> ../tests/compile-fail/invalid_serializer.rs:14:1
   |
14 | serde::format_description!(my_format, OffsetDateTime, not_string); // string format wrong type
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires const checking `my_format::description`...
  --> ../tests/compile-fail/invalid_serializer.rs:14:1
   |
14 | serde::format_description!(my_format, OffsetDateTime, not_string); // string format wrong type
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which requires computing whether `my_format::description::{opaque#0}` is freeze...
   = note: ...which requires evaluating trait selection obligation `my_format::description::{opaque#0}: core::marker::Freeze`...
   = note: ...which again requires computing type of opaque `my_format::description::{opaque#0}`, completing the cycle
note: cycle used when computing type of `my_format::description::{opaque#0}`
  --> ../tests/compile-fail/invalid_serializer.rs:14:1
   |
14 | serde::format_description!(my_format, OffsetDateTime, not_string); // string format wrong type
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information
   = note: this error originates in the macro `serde::format_description` (in Nightly builds, run with -Z macro-backtrace for more info)
